# ChordReference

./: .gitignore  CMakeLists.txt  READMD.md  README.md  插件介绍.md  版本迭代介绍.md
Resources/Languages/: strings_en.json  strings_zh.json
Source/: ArpeggioEngine.cpp  ArpeggioEngine.h  ArpeggioHumanizer.cpp  ArpeggioHumanizer.h  ArpeggioMatcher.cpp  ArpeggioMatcher.h  ArpeggioMidiRenderer.cpp  ArpeggioMidiRenderer.h  ArpeggioPatternLibrary.cpp  ArpeggioPatternLibrary.h  ArpeggioPreviewState.h  ArpeggioTypes.h  ChordCard.cpp  ChordCard.h  ChordNaming.cpp  ChordNaming.h  CircleOfFifths.cpp  CircleOfFifths.h  LocalisedStrings.cpp  LocalisedStrings.h  MiniKeyboard.cpp  MiniKeyboard.h  ModernPurpleLookAndFeel.cpp  ModernPurpleLookAndFeel.h  MoodMapper.cpp  MoodMapper.h  MusicTypes.h  NegativeHarmony.h  PianoSamplerVoice.h  PitchNameHelper.cpp  PitchNameHelper.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  PresetEditorPanel.cpp  PresetEditorPanel.h  PresetInspectorPanel.cpp  PresetInspectorPanel.h  ProgressionBrowser.cpp  (+27 more)
